# fts-telegram

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .cruft.json  .editorconfig  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: github-actions.yml
docs/: conf.py  installation.rst  usage.rst
docs/reference/: fts_telegram.rst  index.rst
src/fts_telegram/: __main__.py  cli.py  lib.py
tests/: test_fts_telegram.py
