[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["maya", "telethon.*"]
ignore_missing_imports = true

[tool.poetry]
name = "fts-telegram"
version = "0.0.0"
description = "Telegram crawler for Feats"
authors = ["W. Augusto Andreoli <andreoli@sent.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/andreoliwa/fts-telegram"
classifiers = [
  # complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: Unix",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.11"
typer = "*"
telethon = "*"
maya = "*"
orjson = "*"

[tool.poetry.group.dev.dependencies]
pytest-env = "^1.1.3"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
fts-telegram = "fts_telegram.cli:app"

[tool.poetry.urls]
"Changelog" = "https://github.com/andreoliwa/fts-telegram/blob/master/CHANGELOG.rst"
"Issue Tracker" = "https://github.com/andreoliwa/fts-telegram/issues"

[tool.pytest_env]
TELEGRAM_API_ID = ""
TELEGRAM_API_HASH = ""

[tool.ruff]
extend-exclude = ["static", "ci/templates"]
ignore = [
  "RUF001", # ruff-specific rules ambiguous-unicode-character-string
  "S101", # flake8-bandit assert
  "S308", # flake8-bandit suspicious-mark-safe-usage
  "E501" # pycodestyle line-too-long
]
line-length = 120
select = [
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "DTZ", # flake8-datetimez
  "E", # pycodestyle errors
  "EXE", # flake8-executable
  "F", # pyflakes
  "I", # isort
  "INT", # flake8-gettext
  "PIE", # flake8-pie
  "PLC", # pylint convention
  "PLE", # pylint errors
  "PT", # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "Q", # flake8-quotes
  "RSE", # flake8-raise
  "RUF", # ruff-specific rules
  "S", # flake8-bandit
  "UP", # pyupgrade
  "W" # pycodestyle warnings
]
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.isort]
forced-separate = ["conftest"]
force-single-line = true

[tool.ruff.per-file-ignores]
# B008 Do not perform function call ? in argument defaults
"src/fts_telegram/cli.py" = ["B008"]
"ci/*" = ["S"]
