[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest-cov>=4.1.0",
  "pytest-env>=1.1.3"
]

[project]
name = "fts-telegram"
version = "0.0.0"
description = "Telegram crawler for Feats"
authors = [{name = "W. Augusto Andreoli", email = "andreoli@sent.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "maya",
  "orjson",
  "telethon",
  "typer",
  "tzlocal"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: Unix",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Utilities"
]

[project.scripts]
fts-telegram = "fts_telegram.cli:app"

[project.urls]
Repository = "https://github.com/andreoliwa/fts-telegram"
Changelog = "https://github.com/andreoliwa/fts-telegram/blob/master/CHANGELOG.rst"
"Issue Tracker" = "https://github.com/andreoliwa/fts-telegram/issues"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.hatch.build.targets.wheel]
packages = ["src/fts_telegram"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["maya", "telethon.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
norecursedirs = ["migrations"]
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "-ra --strict-markers --doctest-modules --doctest-glob=*.rst --tb=short"
testpaths = ["tests"]
# Idea from: https://til.simonwillison.net/pytest/treat-warnings-as-errors
# You can add exclusions, some examples:
# ignore:'fts_telegram' defines default_app_config:PendingDeprecationWarning::
# ignore:The {{% if:::
# ignore:Coverage disabled via --no-cov switch!
filterwarnings = ["error"]

[tool.pytest_env]
TELEGRAM_API_ID = ""
TELEGRAM_API_HASH = ""

[tool.ruff]
extend-exclude = ["static", "ci/templates"]
line-length = 120
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
ignore = [
  "RUF001", # ruff-specific rules ambiguous-unicode-character-string
  "S101", # flake8-bandit assert
  "S308", # flake8-bandit suspicious-mark-safe-usage
  "E501" # pycodestyle line-too-long
]
select = [
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "DTZ", # flake8-datetimez
  "E", # pycodestyle errors
  "EXE", # flake8-executable
  "F", # pyflakes
  "I", # isort
  "INT", # flake8-gettext
  "PIE", # flake8-pie
  "PLC", # pylint convention
  "PLE", # pylint errors
  "PT", # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "Q", # flake8-quotes
  "RSE", # flake8-raise
  "RUF", # ruff-specific rules
  "S", # flake8-bandit
  "UP", # pyupgrade
  "W" # pycodestyle warnings
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.isort]
forced-separate = ["conftest"]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
# B008 Do not perform function call in argument defaults
"src/fts_telegram/cli.py" = ["B008"]
"ci/*" = ["S", "PLC"]
